feat: seperated search for public and private
